# certbot-dns-gny

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
certbot_dns_gny/: __init__.py  dns_gny.py  gnyclient.py
debian/: changelog  control  copyright
scripts/: check_version_consistency.py
tests/: test_authenticator.py  test_gnyclient.py
