[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "certbot-dns-gny"
version = "0.2.1"
description = "Certbot DNS Authenticator plugin for GNY"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Certbot",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: Security",
]
dependencies = [
    "certbot>=2.0",
    "requests>=2.20",
]

[project.scripts]
gnyclient = "certbot_dns_gny.gnyclient:main"

[project.entry-points."certbot.plugins"]
dns-gny = "certbot_dns_gny.dns_gny:Authenticator"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
lint = [
    "ruff",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
addopts = "--cov=certbot_dns_gny --cov-report=term-missing"
